# pineapple

./: .gitignore  README.md  init.lua  setup_codespace.sh  workflow.sh  workflow_gen.sh  workflow_move.sh  workflow_nots.sh  workflow_ts.sh  yeet.txt
doc/: pineapple.txt
updater/: .theme.swp  Cargo.toml  README.md  cmd.txt  cmd2.txt  code_sample.vim  colors.json  fix_gh_file.sh  gencolors.json  gh_out_10.json  gh_out_11.json  gh_out_2.json  gh_out_3.json  gh_out_4.json  gh_out_5.json  gh_out_6.json  gh_out_7.json  gh_out_8.json  gh_out_9.json  gh_queries.txt  list.txt  nvc_colscheme.json  nvc_luascheme.json  nvc_tsscheme.json  nvc_tsscolscheme.json  refix_gh_file.sh  repos.json  run.sh  scrape.sh  scrape_gh.sh  scrape_neovimcraft.sh  scrape_single_gh.sh  tsscolscheme.json
updater/confs/ooga-0/nvim/lua/stuff/: colorscheme.lua
updater/confs/ooga-1/nvim/lua/stuff/: colorscheme.lua
updater/confs/ooga-2/nvim/lua/stuff/: colorscheme.lua
updater/confs/ooga-3/nvim/lua/stuff/: colorscheme.lua
updater/confs/ooga-4/nvim/: lazy-lock.json
updater/confs/ooga-4/nvim/lua/stuff/: colorscheme.lua
updater/confs/ooga-5/nvim/lua/stuff/: colorscheme.lua
updater/confs/ooga-7/nvim/lua/: .luarc.json
updater/confs/ooga-7/nvim/lua/stuff/: colorscheme.lua
updater/confs/ooga-8/nvim/lua/stuff/: colorscheme.lua
updater/nvim_worker/: init.lua  lazy-lock.json
updater/nvim_worker/lua/stuff/: colorscheme.lua  lazy.lua  pineapple.lua  utils.lua
updater/nvim_worker_no_ts/: init.lua
updater/nvim_worker_no_ts/lua/stuff/: colorscheme.lua  init.lua
updater/src/: main.rs
(+34 files in other folders)
