[package]
name = "updater"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive", "serde_derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tokio-macros = "2.2.0"
